--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,9 +1,9 @@
 .container {
   height: 80vh;
+  width: 90vw;
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 90vw;
-  margin: 0 auto;
 }
 
 .left,
