Testimonials section added

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 html,
 body {
+  cursor: none;
   background-color: rgb(246, 241, 236) !important;
   font-family: "Playfair Display", serif !important;
 }
