--- a/src/components/testimonial/style.css
+++ b/src/components/testimonial/style.css
@@ -59,3 +59,13 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+@media screen and (max-width: 960px) {
+  blockquote {
+    border-left: none;
+    font-size: 1rem;
+  }
+  blockquote:before {
+    font-size: 4rem;
+  }
+}
