--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,6 +1,7 @@
 .container {
   height: 80vh;
   width: 90vw;
+  position: relative;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -9,6 +10,31 @@
 .left,
 .right {
   grid-row: 1/2;
+  position: absolute;
+}
+
+.image {
+  position: absolute;
+  width: 70vw;
+  height: 80vh;
+  top:0;
+  left: 0;
+  object-fit: contain;
+  animation: imgSlide 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000);
+}
+
+@keyframes imgSlide { 
+  0% {
+    /* -webkit-transform: scale(0.5);
+            transform: scale(0.5); */
+            transform: translateX(400px);
+  }
+  100% {
+    /* -webkit-transform: scale(1);
+            transform: scale(1); */
+
+            transform: translateX(0);
+   }
 }
 
 .left {
@@ -16,6 +42,21 @@
   align-self: center;
   color: #000;
   z-index: 2;
+  animation: contentSlide 0.8s cubic-bezier(0.390, 0.575, 0.565, 1.000);
+}
+
+@keyframes contentSlide { 
+  0% {
+    /* -webkit-transform: scale(0.5);
+            transform: scale(0.5); */
+            transform: translateX(-400px);
+  }
+  100% {
+    /* -webkit-transform: scale(1);
+            transform: scale(1); */
+
+            transform: translateX(0);
+   }
 }
 
 .right {
