--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 html,
 body {
   cursor: none;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background-color: rgb(246, 241, 236) !important;
   font-family: "Playfair Display", serif !important;
 }
