--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 html,
 body {
-  cursor: none;
+  /* cursor: none; */
   /* overflow-x: hidden; */
   background-color: rgb(246, 241, 236) !important;
   font-family: "Playfair Display", serif !important;
